@@ -161,8 +161,18 @@ default=yes
 	key=n
 	[/hotkey]
 	[hotkey]
+	command=cycleback
+	key=n
+	shift=yes
+	[/hotkey]
+	[hotkey]
 	command=endunitturn
 	key=" "
+	[/hotkey]
+	[hotkey]
+	command=holdposition
+	key=" "
+	shift=yes
 	[/hotkey]
 	[hotkey]
 	command=leader
@@ -330,8 +340,18 @@ default=yes
 	key=n
 	[/hotkey]
 	[hotkey]
+	command=cycleback
+	key=n
+	shift=yes
+	[/hotkey]
+	[hotkey]
 	command=endunitturn
 	key=" "
+	[/hotkey]
+	[hotkey]
+	command=holdposition
+	key=" "
+	shift=yes
 	[/hotkey]
 	[hotkey]
 	command=leader
